# FinReport_Agent

./: .env.example  .gitignore  AGENTS.md  README.md  my_config.yaml  pyproject.toml  run_report.py
demo/backend/: _DEV_MEMO.md  app.py
demo/backend/config/: example_system_config.json  (+1 more)
demo/frontend/: _DEV_MEMO.md  index.html  package-lock.json  package.json  vite.config.js
docs/: FinReport_Architecture.drawio
src/agents/: _DEV_MEMO.md  __init__.py  base_agent.py
src/config/: _DEV_MEMO.md  __init__.py  config.py  default_config.yaml  models.py
src/memory/: _DEV_MEMO.md
src/template/: _DEV_MEMO.md  company_outline.md  company_outline_zh.md  industry_outline_zh.md  report_template_yulan.docx
src/tools/: _DEV_MEMO.md  __init__.py  base.py
src/utils/: _DEV_MEMO.md  __init__.py  async_helpers.py  code_executor.py  code_executor_async.py  code_executor_legacy.py  figure_helper.py  helper.py  index_builder.py  llm.py  logger.py  pdf2fig.py  prompt_loader.py  retry.py
tests/: .env.example  debug_vlm_connection.py  my_config.yaml  test_click_tool.py  test_report_gen.py  test_search_click_integration.py
tests/agents/: reload_agent.py  test_data_analyzer.py  test_data_collector.py  test_deepsearch_agent.py
tests/basic_components/: step1_test_indexbuilder.py  step2_test_image_replacement.py  step3_test_reference_replacement.py  step4_test_memory_persistence.py  test_code_executor.py  test_config.py  test_crawl.py  test_embedding.py  test_index_builder.py  test_tool.py  test_vlm.py
tests/debug_tools/: inspect_memory.py
tests/utils/: mock_data.py
(+48 files in other folders)
